# virtual_machine

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  input_asm.zlp  tags
src/: ;  CMakeLists.txt  array.hpp  code_section_parser.cpp  code_section_parser.hpp  common.hpp  data_section_parser_utilities.cpp  debug.hpp  defs.hpp  extension_defs.hpp  instruction.hpp  instruction_envirnoment.cpp  label.hpp  lexer.cpp  lexer.hpp  lexer_defs.hpp  logger.cpp  logger.hpp  main  main.cpp  operand.hpp  parser.cpp  parser.hpp  parser_defs.hpp  syntax_description.txt  type_defs.hpp  utility.hpp  variable.cpp  variable.hpp
